More files add with new changes
I added the celebration FX you asked for:
✨ Level-up celebration
Bright flash effect
Sparkling/confetti burst around the board corners
🧹 Line clear celebration
Flash + sparkle sweep across the cleared rows
Stronger visual “reward feeling” when clearing multiple lines
🎵 More “theme feel” sound
Level-up sound improved into a 3-note arpeggio
Perfect clear sound improved too
🧠 Also included:
Updated service worker cache version so the new effects load properly (no stuck old cache)
icons/ folder created properly (manifest + SW require it)

--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "Super Tetra Game",
-  "short_name": "Tetris",
-  "description": "A modern, polished Tetris game with replay, training, and mobile controls.",
-  "start_url": "./tetri.html",
+  "short_name": "STG",
+  "description": "A modern, polished Tetris-style puzzle game with sound, music, and replay. Contact: info@supertetragame.com",
+  "start_url": "./Tetris.html",
   "display": "fullscreen",
   "orientation": "portrait",
   "background_color": "#0b1020",
